add find all structs API and service
