# swagger/swagger.json
@@ -29,6 +29,23 @@
             }
         },
         "/structs/": {
+            "get": {
+                "tags": [
+                    "structs"
+                ],
+                "description": "Find all structs",
+                "responses": {
+                    "200": {
+                        "description": "{result} the Struct"
+                    },
+                    "404": {
+                        "description": "struct not found"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "structs"
